# pyemu

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
docs/: adding-a-core.md  architecture.md  gbc-bringup.md  testing.md
native/: CMakeLists.txt
native/include/pyemu/core/: emulator.h  plugin.h  system.h
native/include/pyemu/systems/gameboy/: gameboy_system.h
native/include/pyemu/systems/gbc/: gbc_system.h
native/src/core/: emulator.c
native/src/systems/gameboy/: apu.c  cpu_core.c  cpu_exec.c  cpu_helpers.c  gameboy_internal.h  gameboy_plugin.c  gameboy_system.c  input.c  mapper.c  memory.c  ppu.c  state.c
native/src/systems/gbc/: gbc_apu.c  gbc_helpers.c  gbc_internal.h  gbc_plugin.c  gbc_system.c
python/pyemu/: __init__.py  app.py  controller_script.py  display.py  input_devices.py  runtime.py  widgets.py
scripts/: fetch_public_test_roms.py  public_test_roms.py  regression_smoke.py
scripts/tas_examples/: tetris_auto_drop.py
